--- a/test/fixtures/assets.yml
+++ b/test/fixtures/assets.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: assets
+#
+#  id                 :integer          not null, primary key
+#  uploadable_id      :integer
+#  uploadable_type    :string(255)
+#  created_at         :datetime
+#  updated_at         :datetime
+#  photo_file_name    :string(255)
+#  photo_content_type :string(255)
+#  photo_file_size    :integer
+#  photo_updated_at   :datetime
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
